// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColStyled renders correctly 1`] = `
<div
  className="sc-bdVaJa ifUQXn Col__Col-hCQanm rqKxU"
/>
`;

exports[`ColStyled renders with align props 1`] = `
<div
  className="sc-bdVaJa jTFsIO Col__Col-hCQanm rqKxU"
/>
`;

exports[`ColStyled renders with color props 1`] = `
<div
  className="sc-bdVaJa gchyjS Col__Col-hCQanm rqKxU"
  color="red"
/>
`;
